<resources>
    <string name="app_name">Student System</string>
    <string name="ruhul_name">Ruhul Amin</string>
    <string name="humayun_name">Humayun Kabir</string>
    <string name="rasel_name">Rasel Ahmed</string>
    <string name="masud_name">Masud Parvage</string>
    <string name="anfal_name">Anfal Galib</string>
    <string name="naeem_name">Naeem Hasan</string>
    <string name="harun_name">Harun or Rashid</string>
    <string name="jibon_name">Mainul Hasan Jibon</string>
    <string name="sumon_name">Arfin Sumon</string>

    <string name="details">Hello, I am a student. I want to learn many things. please help me to learn some thing. I know you are much professional. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the. Get free texting and calling on WiFi with the free TextNow app. Shop affordable no contract smartphones and plans from TextNow Wireless. Get free texting and calling on WiFi with the free TextNow app. Shop affordable no contract smartphones and plans from TextNow Wireless. Get free texting and calling on WiFi with the free TextNow app. Shop affordable no contract smartphones and plans from TextNow Wireless.</string>
</resources>
